--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");
+
+body {
+  @apply min-h-screen text-4xl font-Quicksand bg-cocoa-bean;
+}
+
+#root {
+  @apply flex flex-col min-h-screen relative;
+}
